samples/_failures_safe/1761040218_8395d6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f0ccde69.c: In function ‘main’:
./samples/SAFE/__tmp_f0ccde69.c:167:12: error: missing terminating " character
  167 |     printf("Enter edges
      |            ^~~~~~~~~~~~
./samples/SAFE/__tmp_f0ccde69.c:167:5: error: expected expression at end of input
  167 |     printf("Enter edges
      |     ^~~~~~
./samples/SAFE/__tmp_f0ccde69.c:167:5: error: expected declaration or statement at end of input
